// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChangeOtherListModal > renders appropriate instructions when copy and lists 1`] = `
<div
  class="modal-content"
>
  <div
    class="modal-header"
  >
    Choose an existing list or create a new one to copy items
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div>
  <div
    class="modal-body"
  >
    <form
      autocomplete="off"
      class=""
    >
      <button
        class="float-end btn btn-link"
        style="padding: 0px;"
        type="button"
      >
        Create new list
      </button>
      <div
        class="tw:mb-3"
      >
        <div
          class="tw:w-full"
        >
          <label
            class="tw:block tw:text-sm tw:font-medium tw:text-[var(--color-text-secondary)] tw:mb-2"
            for="existingList"
          >
            Existing list
          </label>
          <select
            class="tw:w-full tw:h-11 tw:px-4 tw:py-2 tw:bg-[var(--color-surface)] tw:border tw:border-[var(--color-border)] tw:rounded-lg tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30 tw:focus:border-[var(--color-border-strong)] tw:appearance-none tw:bg-[image:url('data:image/svg+xml;utf8,<svg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22%236b7280%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22><polyline%20points=%226%209%2012%2015%2018%209%22></polyline></svg>')] tw:bg-no-repeat tw:bg-right tw:pr-10"
            id="existingList"
            name="existingList"
          >
            <option
              disabled=""
              value=""
            >
              Select Existing list
            </option>
            <option
              value="list-2"
            >
              Existing List
            </option>
          </select>
        </div>
      </div>
      <div
        class="btn-group"
        role="group"
      >
        <div
          class=" gap-2 mt-3"
        >
          <button
            class="font-medium transition-colors duration-200 ease-in-out min-h-[44px] flex items-center justify-center gap-2 bg-[var(--color-primary)] text-white hover:bg-[var(--color-primary-hover)] active:opacity-90 h-10 px-4 text-sm rounded-lg  cursor-pointer"
            type="submit"
          >
            Complete
          </button>
          <button
            class="font-medium transition-colors duration-200 ease-in-out min-h-[44px] flex items-center justify-center gap-2 text-[var(--color-text-secondary)] hover:bg-[var(--color-surface-overlay)] active:bg-[var(--color-surface-raised)] h-10 px-4 text-sm rounded-lg  cursor-pointer"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChangeOtherListModal > renders appropriate instructions when move and lists 1`] = `
<div
  class="modal-content"
>
  <div
    class="modal-header"
  >
    Choose an existing list or create a new one to move items
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div>
  <div
    class="modal-body"
  >
    <form
      autocomplete="off"
      class=""
    >
      <button
        class="float-end btn btn-link"
        style="padding: 0px;"
        type="button"
      >
        Create new list
      </button>
      <div
        class="tw:mb-3"
      >
        <div
          class="tw:w-full"
        >
          <label
            class="tw:block tw:text-sm tw:font-medium tw:text-[var(--color-text-secondary)] tw:mb-2"
            for="existingList"
          >
            Existing list
          </label>
          <select
            class="tw:w-full tw:h-11 tw:px-4 tw:py-2 tw:bg-[var(--color-surface)] tw:border tw:border-[var(--color-border)] tw:rounded-lg tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30 tw:focus:border-[var(--color-border-strong)] tw:appearance-none tw:bg-[image:url('data:image/svg+xml;utf8,<svg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22%236b7280%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22><polyline%20points=%226%209%2012%2015%2018%209%22></polyline></svg>')] tw:bg-no-repeat tw:bg-right tw:pr-10"
            id="existingList"
            name="existingList"
          >
            <option
              disabled=""
              value=""
            >
              Select Existing list
            </option>
            <option
              value="list-2"
            >
              Existing List
            </option>
          </select>
        </div>
      </div>
      <div
        class="btn-group"
        role="group"
      >
        <div
          class=" gap-2 mt-3"
        >
          <button
            class="font-medium transition-colors duration-200 ease-in-out min-h-[44px] flex items-center justify-center gap-2 bg-[var(--color-primary)] text-white hover:bg-[var(--color-primary-hover)] active:opacity-90 h-10 px-4 text-sm rounded-lg  cursor-pointer"
            type="submit"
          >
            Complete
          </button>
          <button
            class="font-medium transition-colors duration-200 ease-in-out min-h-[44px] flex items-center justify-center gap-2 text-[var(--color-text-secondary)] hover:bg-[var(--color-surface-overlay)] active:bg-[var(--color-surface-raised)] h-10 px-4 text-sm rounded-lg  cursor-pointer"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChangeOtherListModal > renders appropriate instructions when no lists 1`] = `
<div
  class="modal-header"
>
  You do not have any other lists with the same configuration. Please create a new list to take this action.
  <button
    aria-label="Close"
    class="btn-close"
    type="button"
  />
</div>
`;
